--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,16 @@
 		    <artifactId>postgresql</artifactId>
 		</dependency>
 		<dependency>
+		    <groupId>org.webjars.bower</groupId>
+		    <artifactId>sockjs-client</artifactId>
+		    <version>1.1.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>stomp-websocket</artifactId>
+		    <version>2.3.3-1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
