--- a/src/main/resources/angular2/ui/package.json
+++ b/src/main/resources/angular2/ui/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-      "build": "ng build && mv ../static/index.html ../templates/app.html",
-      "serve": "ng serve"
+    "build": "ng build && mv ../static/index.html ../templates/app.html",
+    "serve": "ng serve"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +20,8 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "socket.io-client": "^2.0.1",
+    "sockjs-client": "^1.1.4",
+    "stompjs": "^2.3.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
